# action-validator

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-hooks.yaml  .prettierignore  .tool-versions  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  action.yml  build.rs  package-lock.json  package.json
.cargo/: audit.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: audit.yml  build.yml  detect-schema-changes.yml  example.yml  qa.yml  release.yml  self-hosted-example.yml  test.yml  update-submodules.yml
action/: README.md  action.yml
scripts/: build-wasm.sh  test-wasm.sh
src/: cli.rs  config.rs  github-action.json  github-workflow.json  lib.rs  log.rs  main.rs  schemas.rs  validation_error.rs  validation_state.rs
src/js/: system.js
src/system/: console.rs  fs.rs  git.rs  glob.rs  mod.rs  process.rs
src/validators/: job_uses.rs  mod.rs  models.rs
test/: run
test/001_basic_workflow/: test.yml
test/003_subdir_globs/: cli_args
test/003_successful_globs/: glob.yml
test/004_failing_globs/: glob.yml  stderr  stdout
test/004a_failing_negative_glob/: stderr  stdout
test/007_funky_syntax/: stdout
test/008_job_dependencies/: stderr  stdout  validation_state.snap.json
test/009_multi_file/: stdout  valid.yml  validation_state.snap.json
test/010_missing_shell_in_action/: stderr
tests/: run.mjs  snapshot_tests.rs
tests/002_basic_action/: validation_state.snap.json
tests/003_successful_globs/: glob.yml
tests/004_failing_globs/: glob.yml  stderr  stdout
tests/007_funky_syntax/: rust-check.yml  stderr  stdout  validation_state.snap.json
tests/008_job_dependencies/: stderr  stdout  test.yml
tests/009_multi_file/: stderr  stdout  validation_state.snap.json  xinvalid.yml
tests/011_remote_checks_failure/: stderr  stdout  test.yml
tests/fixtures/002_basic_action/: action.yml
tests/fixtures/003_successful_globs/: glob.yml
tests/fixtures/004_failing_globs/: glob.yml  stderr  stdout  test.json
tests/fixtures/004a_failing_negative_glob/: glob.yml  stderr  stdout
tests/fixtures/005_conditional_step_in_action/: action.yml
tests/fixtures/006_workflow_dispatch_inputs_options/: test.yml
tests/fixtures/007_funky_syntax/: stderr  stdout
tests/fixtures/008_job_dependencies/: stderr  stdout
tests/fixtures/009_multi_file/: stderr  stdout
tests/fixtures/010_missing_shell_in_action/: action.yml  stderr  stdout
tests/fixtures/011_subdir_globs/: test.json
tests/fixtures/011_subdir_globs/subdir/: glob.yml
tests/fixtures/012_github_glob_syntax/: glob.yml
tests/fixtures/012_uses_ok/: test.json  test.yml
tests/fixtures/012_uses_ok/.github/actions/custom/: action.yml
tests/fixtures/013_rejects_gitignore_extended_glob_syntax/: glob.yml  stderr  stdout
tests/fixtures/013_uses_invalid_format/: stderr  stdout  test.yml
tests/fixtures/014_environment_deployment/: test.yml
tests/fixtures/014_uses_local_missing/: stderr  stdout  test.json  test.yml
